--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,5 +1,29 @@
 .container {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: 1500px;
     padding: 10px;
 }
+
+// @import '../styles/global.scss';
+
+// .container {
+//   position: relative;
+//   min-height: 100vh;
+
+//   .content {
+//     padding-bottom: 100px;
+//     margin:0 auto;
+//     max-width: $site-width;
+
+//     a {
+//       color: $color-pallete-8;
+//     }
+
+//     @media screen and (min-width: 1px) and (max-width: 1000px) {
+//       padding-left: 20px;
+//       padding-right: 20px;
+//     }
+
+//   }
+
+// }
