--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,13 @@
-body {
+/* body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 3em;
-  line-height: 5em;
+  margin: 5em;
+  line-height: 1.5em;
+} */
+
+body {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1em;
+  line-height: 1.5em;
+  margin: 0px;
 }
+
