--- a/src/pages/404.module.scss
+++ b/src/pages/404.module.scss
@@ -11,3 +11,20 @@
         font-family: 'Courier New', Courier, monospace;
     }
 }
+
+
+// .content {
+
+//     background-color: #fafafa;
+//     padding: 20px;
+ 
+//     .header {
+//         color: red;
+//      }
+     
+//      .error-message {
+//         font-size: 20px;
+//         color: gray;
+//      }
+ 
+//  }
