--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,10 @@ body {
   margin: 0px;
 }
 
+/* body {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  line-height: 22px;
+  margin: 0px;
+} */
+
